# aftviewer

./: .gitignore  .gitmodules  MANIFEST.in  README.md  installer.py  png_sample.py  print_api_doc.py  pyproject.toml  pyviewer  requirements.txt  sample.json
.github/workflows/: check-version-update.yml  run-test.yml  set-tag.yml
aftviewer/: __init__.py
aftviewer/cli/: __init__.py  get_types.py  installer.py  updater.py
aftviewer/core/: __init__.py  __version__.py  cui.py  default.json  default.toml  dict_viewer.py  helpmsg.py  types.py
aftviewer/core/image_viewer/: PIL.py  __init__.py  bokeh.py  cv2.py  matplotlib.py
aftviewer/requirements/: image_viewer.txt  stl.txt
aftviewer/shell-completion/: completion.bash  completion.zsh
aftviewer/test/: __init__.py  test_args_for_ft.py  test_cli.py  test_core.py  test_help.py  test_imageviewer.py  test_wikiutil.py
aftviewer/viewers/: __init__.py  e-mail.py  excel.py  fits.py  hdf5.py  healpix.py  jupyter.py  np_pickle.py  numpy.py  pickle.py  plist.py  raw_image.py  root.py  sqlite3.py  stl.py  tar.py  xpm.py  zip.py
lib/: print_api_doc.py
lib/test/: test_core.py  test_imageviewer.py
lib/viewers/: hdf5.py  np_pickle.py  pickle.py  sqlite3.py
lib/viewers/core/: __init__.py  cui.py  helpmsg.py  types.py
lib/viewers/core/image_viewer/: PIL.py  __init__.py  matplotlib.py
pyviewer/: __init__.py  main.py
pyviewer/cli/: __init__.py
pyviewer/core/: __init__.py  helpmsg.py  print_api_doc.py  types.py
pyviewer/core/image_viewer/: __init__.py  cv2.py
pyviewer/shell-completion/: completion.bash  completion.zsh
pyviewer/test/: __init__.py  test_args_for_ft.py  test_core.py  test_help.py  test_imageviewer.py
pyviewer/viewers/: __init__.py  hdf5.py  jupyter.py  np_pickle.py  numpy.py  pickle.py  sqlite3.py  tar.py  xpm.py  zip.py
pyviewerlib/: __init__.py  hdf5.py  jupyter.py  np_pickle.py  numpy.py  pickle.py  raw_image.py  sqlite3.py  stl.py  tar.py  xpm.py  zip.py
pyviewerlib/core/: __init__.py  cui.py  default.json  helpmsg.py  image_viewer.py  print_api_doc.py  update.py
pyviewerlib/core/image_viewer/: PIL.py  __init__.py  cv2.py  matplotlib.py
requirements/: excel.txt
samples/: README.md  add_args_sample.py  png_sample.py  sample.json  setting_sample.json  setting_sample.toml  show_image.py
samples/extensions/: README.md  sixel.py
samples/gif/: README.md
shell/: completion.bash  completion.zsh  test.sh
wikiutil/: options_text.toml  print_api_doc.py  print_intro.py  print_options.py
