[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyviewer"
description = "CUI view tool made by python."
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = [
    "pymeflib@git+https://github.com/MeF0504/pymeflib#egg=main",
]
license = {file = "LICENSE"}
authors = [{name = "MeF0504"}]
# https://pypi.org/classifiers/
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Private :: Do Not Upload",
]
[project.urls]
documentation = "https://github.com/MeF0504/pyviewer/wiki"
repository = "https://github.com/MeF0504/pyviewer"
[project.scripts]
pyviewer = "pyviewer.cli:main"
_get_pyviewer_types = "pyviewer.cli:get_types"
[project.optional-dependencies]
# https://setuptools.pypa.io/en/latest/userguide/dependency_management.html#optional-dependencies
numpy = ["numpy"]
hdf5 = ["h5py", "numpy"]
raw_image = ["rawpy"]
sqlite3 = ["tabulate"]
image_viewer = ["Pillow", "matplotlib", "opencv-python"]
all = ["numpy", "h5py", "rawpy", "tabulate", "Pillow", "matplotlib", "opencv-python"]
debug = ["pytest"]

[tool.setuptools]
packages = [
    "pyviewer",
    "pyviewer.core",
    "pyviewer.core.image_viewer",
    "pyviewer.cli",
    "pyviewer.viewers",
    "pyviewer.test",
]
# include non-default (non-python?) files
include-package-data = true
[tool.setuptools.dynamic]
version = {attr = "pyviewer.core.__version__.VERSION"}
