[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aftviewer"
description = "CUI view tool made by python."
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["version", "dependencies"]
license = {file = "LICENSE"}
authors = [{name = "MeF0504"}]
# https://pypi.org/classifiers/
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Private :: Do Not Upload",
]
[project.urls]
documentation = "https://github.com/MeF0504/aftviewer/wiki"
repository = "https://github.com/MeF0504/aftviewer"
[project.scripts]
aftviewer = "aftviewer.cli:main"
_get_aftviewer_types = "aftviewer.cli:get_types"
[project.optional-dependencies]
# https://setuptools.pypa.io/en/latest/userguide/dependency_management.html#optional-dependencies
numpy = ["numpy"]
hdf5 = ["h5py", "numpy"]
raw_image = ["rawpy"]
sqlite3 = ["tabulate"]
stl = ["numpy-stl"]
fits = ["astropy"]
image_viewer = ["Pillow", "matplotlib", "opencv-python"]
all = ["numpy", "h5py", "rawpy", "tabulate", "Pillow", "matplotlib", "opencv-python", "numpy-stl", "astropy"]
debug = ["pytest"]

[tool.setuptools]
packages = [
    "aftviewer",
    "aftviewer.core",
    "aftviewer.core.image_viewer",
    "aftviewer.cli",
    "aftviewer.viewers",
    "aftviewer.test",
]
# include non-default (non-python?) files
include-package-data = true
[tool.setuptools.dynamic]
version = {attr = "aftviewer.core.__version__.VERSION"}
dependencies = {file = ["requirements.txt"]}
